<resources>
    <string name="app_name">CommonActivity</string>
    <string name="call">打电话</string>
    <string name="login">登录</string>
    <string name="login_sp">登录(保存数据到sp中)</string>
    <string name="login_cache">登录(保存数据到缓存)</string>
    <string name="tv_ring">响铃是震动</string>
    <string name="tv_user_data">用户信息</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="btn_save">保存</string>
    <string name="btn_query">查询</string>
    <string name="tv_result">查询结果</string>
    <string name="tv_name">姓名</string>
    <string name="btn_dialog1">普通对话框</string>
    <string name="btn_dialog2">单选对话框</string>
    <string name="btn_dialog3">多选对话框</string>
    <string name="btn_dialog4">进度对话框(不带实时进度)</string>
    <string name="btn_dialog5">进度对话框(带实时进度)</string>
    <string name="btn_dialog6">日期对话框</string>
    <string name="btn_dialog7">时间对话框</string>
    <string name="tv_checked">选中的结果</string>
    <string name="btn_load_img">加载图片</string>
    <string name="et_path">http://192.168.31.133:8080/ymh.txt</string>
    <string name="btn_load_txt">加载文本</string>
    <string name="et_city">城市</string>
    <string name="btn_query_weather">查询天气</string>
    <string name="tv_fengli">风力</string>
    <string name="tv_date">日期</string>
    <string name="tv_low">低温</string>
    <string name="tv_type">天气</string>
    <string name="tv_xiaoyu">小雨</string>
    <string name="tv_high">高温</string>
    <string name="tv_fengxiang">风向</string>
    <string name="btn_home">桌面</string>
    <string name="btn_browser">浏览器</string>
    <string name="btn_sms">发短信</string>
    <string name="btn_call">电话</string>
    <string name="btn_category">Activity的Category</string>
    <string name="btn_action">Activity的Action</string>
    <string name="btn_camera">打开相机</string>
    <string name="btn_open_album">打开相册</string>
    <string name="btn_net_img">打开网络图片</string>
    <string name="item_sms_helper">短信助手</string>
    <string name="item_intent">Activity的intent</string>
    <string name="et_number">请输入电话号码</string>
    <string name="et_sms">短信内容</string>
    <string name="btn_select_template">选择短信模板</string>
    <string name="btn_send">发送短信</string>
    <string name="tv_tempalte">短信模板</string>
    <string name="tv_number">联系人电话</string>
    <string name="item_receiver">自定义广播</string>
    <string name="btn_my_receiver">发送自定义广播</string>
    <string name="btn_send_order_receiver">发送有序广播</string>
    <string name="item_service">服务Service</string>
    <string name="btn_start_service">使用start启动Service</string>
    <string name="btn_bind_service">使用bind方法开启service</string>
    <string name="btn_call_method_in_service">调用service中的方法</string>
    <string name="btn_unbind_service">解绑Service</string>
    <string name="item_service_test">测试服务</string>
    <string name="item_service_banzheng">办证service</string>
    <string name="tv_service_banzheng">办证Service</string>
    <string name="item_service_pay">进程间通信aidl</string>
    <string name="btn_meituan_pay">美团请求阿里支付</string>
    <string name="btn_img_rotate">旋转图片</string>
    <string name="btn_img_scale">图片缩放</string>
    <string name="btn_img_translation_y">沿Y轴平移</string>
    <string name="btn_img_translation_x">沿X轴平移</string>
    <string name="btn_img_mirror_x">Y轴镜像</string>
    <string name="btn_img_mirror_y">X轴镜像</string>
    <string name="btn_red">红色</string>
    <string name="btn_blue">蓝色</string>
    <string name="btn_green">绿色</string>
    <string name="btn_play">播放</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_stop">停止</string>
    <string name="et_music_path">/mnt/sdcard/mtw.mp3</string>
    <string name="et_music_net_path">http://192.168.31.133:8080/qny.mp3</string>
    <string name="btn_sound_pool">声音池</string>
    <string name="btn_vv_start">播放视频</string>
    <string name="btn_circle">开始画圆(在子线程中)</string>
    <string name="btn_sv_video">使用SurfaceView播放视频</string>
    <string name="btn_capture_video">录制视频</string>
    <string name="btn_sensor">获取传感器</string>
    <string name="btn_sensor_light">光传感器</string>
    <string name="btn_sensor_orientation">方向传感器</string>
    <string name="btn_translate">平移</string>
    <string name="btn_alpha">透明度</string>
    <string name="btn_scale">缩放</string>
    <string name="btn_rotate">旋转</string>
    <string name="btn_set">动画集合</string>
    <string name="item_zxing">二维码</string>
    <string name="scan">扫描</string>
    <string name="result">result</string>
    <string name="make_code">生成二维码</string>
    <string name="inout_code">输入需要生成二维码的内容</string>
    <string name="item_refresh_lv">刷新listView</string>
    <string name="item_dagger2">dagger2依赖注入</string>
    <string name="login_get">登录(get)</string>
    <string name="login_post">登录(post)</string>
    <string name="tv_content">内容</string>
    <string name="btn_load_net_img">加载网络图片</string>
    <string name="btn_display">获取屏幕分辨率</string>
    <string name="btn_sv_video_new_test">无缝跳转</string>
    <string name="item_vitamio">vitamio</string>
    <string name="item_web_view">使用WebView播放视频</string>
    <string name="btn_query_ip">查询ip地址</string>
    <string name="item_ijk_player">ijkPlayer</string>
    <string name="item_img">加载图片</string>
    <string name="btn_change">改变</string>
</resources>
