<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.syl.commonactivity.activity.IntentActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <Button android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_home"/>
        <Button android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_call"/>
        <Button android:id="@+id/btn_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sms"/>
        <Button android:id="@+id/btn_browser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_browser"/>
        <Button android:id="@+id/btn_net_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_net_img"/>
        <Button android:id="@+id/btn_open_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_open_album"/>
        <Button android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_camera"/>
        <Button android:id="@+id/btn_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_action"
                android:textAllCaps="false"/>
        <Button android:id="@+id/btn_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_category"
                android:textAllCaps="false"/>
        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_action"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_category"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="textMultiLine"/>
            <TextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="textMultiLine"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>