<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <HorizontalScrollView android:id="@+id/hsv"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <Button android:id="@+id/btn_translate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_translate"/>
            <Button android:id="@+id/btn_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_rotate"/>
            <Button android:id="@+id/btn_scale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_scale"/>
            <Button android:id="@+id/btn_alpha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_alpha"/>
            <Button android:id="@+id/btn_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_set"/>
        </LinearLayout>
    </HorizontalScrollView>
    <ImageView android:id="@+id/iv_img"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:src="@mipmap/ic_launcher"/>

</RelativeLayout>