<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <EditText
        android:id="@+id/et_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text="@string/et_path"/>
    <Button
        android:id="@+id/btn_load_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_load_txt"/>
    <TextView
        android:id="@+id/tv_result"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text="@string/tv_result"/>
</LinearLayout>