<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mei_tuan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.syl.commonactivity.activity.MeiTuanActivity">
    <Button
        android:id="@+id/btn_bind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bind_service"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_meituan_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_meituan_pay"/>
    <Button
        android:id="@+id/btn_unbind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_unbind_service"
        android:textAllCaps="false"/>
</LinearLayout>
