<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_city"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_query_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_query_weather"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:text="@string/tv_result"/>
</LinearLayout>