<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="user"
                android:text="admin"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:text="123"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_login_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_get"/>
        <Button
            android:id="@+id/btn_login_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_post"/>
        <Button
            android:id="@+id/btn_load_net_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_load_net_img"/>
        <Button
            android:id="@+id/btn_load_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_load_txt"/>
        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/tv_content"/>
        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"/>
    </LinearLayout>
</ScrollView>