<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_zxing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.syl.commonactivity.activity.ZXingActivity">
    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2200ff00"
        android:inputType="textMultiLine"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_code"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inout_code"/>
    </android.support.design.widget.TextInputLayout>
    <CheckBox
        android:id="@+id/cb_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView android:id="@+id/iv_code"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:src="@mipmap/ic_launcher"/>
</LinearLayout>
